<?xml version="1.0"?>
<package>
  <name>hiwr_msg</name>
  <version>2.0.0</version>
  <description>The hiwr_msg package</description>

  <maintainer email="lucile.peuch@worldline.com">lpeuch</maintainer>

  <license>Apache V2</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
